Fixes selected character image alignment issue

--- a/styles/Menu.module.css
+++ b/styles/Menu.module.css
@@ -8,6 +8,10 @@
   src: url("../fonts/apex-mk2.regular.otf");
 }
 
+/* :root {
+  --font-size-18: clamp(18px * 0.9, (18 / 1440) * 100vw, 18px);
+} */
+
 .searchForm {
   display: flex;
   flex-direction: column;
@@ -141,8 +145,8 @@
   justify-content: center;
   display: flex;
   flex-direction: column;
-  background-position-y: -130%;
-  background-position-x: 70%;
+  background-position: center;
+  background-size: contain;
 }
 
 /* selectable grid */
@@ -210,6 +214,7 @@
 .selectableName {
   transform: skewX(21deg);
   font-family: Apex Sub;
+  font-size: clamp(1.125vw * 0.9, (1.125 / 1440) * 100vw, 1.125vw);
 }
 
 .notSelectable {
